--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -25,7 +25,7 @@
     <string name="statusbar_settings_summary">Network traffic, Battery styles, etc</string>
     <string name="gestures_title">Gestures</string>
     <string name="gesture_settings_summary">Customize android gesture</string>
-    <string name="pa_illustration_summary">Everythings you Need!</string>
+    <string name="p404_illustration_summary">Everythings you Need!</string>
 
     <!-- General strings -->
     <string name="ok">OK</string>
